--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <html>
     <head>
         <title>Heyo</title>
+        <link rel="stylesheet" type="text/css" href="style.scss">
     </head>
     <body>
-        <h1>Hello</h1>
+        <main>Hello</main>
     </body>
 </html>
