--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Heyo</title>
-        <link rel="stylesheet" type="text/css" href="style.scss">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
         <main>Hello</main>
